# tf_handwriting_synthesis

./: .buildinfo  .gitignore  README.md  dataset.py  doc.sh  genindex.html  index.html  model.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run.sh  search.html  searchindex.js  test.sh  tfsq.dataset.html  tfsq.html  tfsq.model.html  tfsq.train.html  train.py
.github/workflows/: ci.yml  poetry.yml  python-package.yml
docs/: .gitignore  conf.py  index.rst  modules.rst  tfsq.dataset.rst  tfsq.model.rst  tfsq.rst  tfsq.train.rst
testdata/: .gitignore
testdata/ascii/a01/a01-000/: a01-000u.txt
testdata/checkpoint/: checkpoint  ep0_it1.data-00000-of-00001  ep0_it1.index
tfsq/: __init__.py  dataset.py  dataset_test.py  model.py  model_test.py  train.py
